# measure-page-load

./: pyproject.toml
measure_page_load/: main.py
