[tool.poetry]
name = "measure-page-load"
version = "0.1.0"
description = ""
authors = ["Kota <mdryzk64smsh@gmail.com>"]
readme = "README.md"
packages = [{include = "measure_page_load"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.3"
browsermob-proxy = "^0.8.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
